--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#features">Features</a></li>
                 <li><a href="#contact">Contact Us</a></li>
-                <li><a href="#get-started" class="cta-button">Get Started</a></li>
+                <li><a href="https://main-peplix-app-998521.onrender.com/register" class="cta-button">Get Started</a></li>
             </ul>
             <div class="mobile-menu-toggle" id="mobileToggle">
                 <span></span>
